--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ name = "typed-linq-collections"
 version = "0.1.0"
 dependencies = []
 description = "A Python LINQ library with full type annotations, lazy evaluation and collection types that are drop in replacements for standard Python collections."
+readme = "README.md"
 authors = [
     { name = "mlidbom" }
 ]
