--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = []
 description = "A Python LINQ library with full type annotations, lazy evaluation and collection types that are drop in replacements for standard Python collections."
 readme = "README.md"
 authors = [
-    { name = "mlidbom" }
+    { name = "Magnus Lidbom" }
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
