--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ readme = "README.md"
 authors = [
     { name = "Magnus Lidbom" }
 ]
+license = "MIT"
+license-files = [
+    "LICENSE",
+]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
