--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [build-system]
-requires = ["setuptools>=61.0.0", "wheel"]
+requires = ["setuptools", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 where = ["src"]
 
 [project]
-name = "typed-linq-collections"
+name = "typed_linq_collections"
 version = "0.1.0"
-dependencies = []
 description = "A Python LINQ library with full type annotations, lazy evaluation and collection types that are drop in replacements for standard Python collections."
 readme = "README.md"
 authors = [
@@ -18,11 +17,12 @@ license = "MIT"
 license-files = [
     "LICENSE",
 ]
+dependencies = []
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.13",
+    "Operating System :: OS Independent",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Typing :: Typed"
 ]
