--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,8 @@ build-backend = "setuptools.build_meta"
 where = ["src"]
 
 [project]
-name = "typed_linq_collections"
-version = "0.0.2"
+name = "typed-linq-collections"
+version = "0.0.4"
 description = "A Python LINQ library with full type annotations, lazy evaluation and collection types that are drop in replacements for standard Python collections."
 readme = "README.md"
 authors = [
