--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,7 +85,7 @@ ignore = [
 include = ["src", "tests"]
 extraPaths = ["src", "tests"]
 exclude = ["**/node_modules", "**/__pycache__", "**/.*", "**venv/*"]
-typeCheckingMode = "strict" # "off", "basic", "standard", "strict", "recommended", "all"
+typeCheckingMode = "strict" # "off", "basic", "standard", "strict" # basedpyrightonly:  "recommended", "all"
 
 #forced because of incompatibility between basedpyright and pyright, remove once we can use only basedpyright
 reportIgnoreCommentWithoutRule = "none"
