--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ where = ["src"]
 
 [project]
 name = "typed-linq-collections"
-version = "0.9.0"
-description = "Linq for Python with full type annotions. Fluent interface to query and transform any built in Iterable or one of the queryable collections that are drop in replacements for standard collections."
+version = "0.9.1"
+description = "Linq, queryable iterables, for Python with full type annotions. Fluent interface to query and transform any built in Iterable or one of the queryable collections that are drop in replacements for standard collections."
 readme = "README.md"
 authors = [
     { name = "Magnus Lidbom" }
